--- a/index.html
+++ b/index.html
@@ -5,22 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Chemical Supplies</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <section id="navbar">
-    <div class="buttons" id="buttons">
-      <button id="edit">&#128395 <br><span>Edit</span></button>
-      <button id="add">&#10133 <br><span>Add</span></button>
-      <button id="down"> &#129147 <br><span>Down</span></button>
-      <button id="up"> &#129145 <br><span>Up</span></button>
-      <button id="delete">&#10060<br><span>Delete</span></button>
-      <button id="reload">&#11119<br><span>Reload</span></button>
-      <button id="save">&#128190<br><span>Save</span></button>
-    </div>
-  </section>
   <h2>Chemical Supplies</h2>
   <br>
   <div class="add-container" id="add-container">
@@ -37,9 +26,21 @@
     <br>
     <button id="submit">Add</button>
   </div>
-
+       
   <table>
+    <section id="navbar">
+        <div class="buttons" id="buttons">
+          <button id="edit">&#128395 <br><span>Edit</span></button>
+          <button id="add">&#10133 <br><span>Add</span></button>
+          <button id="down"> &#129147 <br><span>Down</span></button>
+          <button id="up"> &#129145 <br><span>Up</span></button>
+          <button id="delete">&#10060<br><span>Delete</span></button>
+          <button id="reload">&#11119<br><span>Reload</span></button>
+          <button id="save">&#128190<br><span>Save</span></button>
+        </div>
+      </section>
     <thead>
+      
       <tr>
         <th><input type="checkbox" name="checkboxMain" id="checkboxMain" class="checkbox-label"></label></th>
         <th id="id">No</th>
