--- a/index.html
+++ b/index.html
@@ -26,39 +26,38 @@
     <br>
     <button id="submit">Add</button>
   </div>
-       
-  <table>
-    <section id="navbar">
-        <div class="buttons" id="buttons">
-          <button id="edit">&#128395 <br><span>Edit</span></button>
-          <button id="add">&#10133 <br><span>Add</span></button>
-          <button id="down"> &#129147 <br><span>Down</span></button>
-          <button id="up"> &#129145 <br><span>Up</span></button>
-          <button id="delete">&#10060<br><span>Delete</span></button>
-          <button id="reload">&#11119<br><span>Reload</span></button>
-          <button id="save">&#128190<br><span>Save</span></button>
-        </div>
-      </section>
-    <thead>
-      
-      <tr>
-        <th><input type="checkbox" name="checkboxMain" id="checkboxMain" class="checkbox-label"></label></th>
-        <th id="id">No</th>
-        <th id="name">Chemical name</th>
-        <th id="vendor">Vendor</th>
-        <th id="density">Density <br><span>g/m²</span>
-        </th>
-        <th id="viscosity">Viscosity <br><span>m²/s</span></th>
-        <th id="packaging">Packaging</th>
-        <th id="size">Pack size</th>
-        <th id="unit">Unit</th>
-        <th id="qty">Quantity</th>
-      </tr>
-    </thead>
-    <tbody id="data-output">
-
-    </tbody>
-  </table>
+  <section id="navbar">
+      <div class="buttons" id="buttons">
+        <button id="edit">&#128395 <br><span>Edit</span></button>
+        <button id="add">&#10133 <br><span>Add</span></button>
+        <button id="down"> &#129147 <br><span>Down</span></button>
+        <button id="up"> &#129145 <br><span>Up</span></button>
+        <button id="delete">&#10060<br><span>Delete</span></button>
+        <button id="reload">&#11119<br><span>Reload</span></button>
+        <button id="save">&#128190<br><span>Save</span></button>
+      </div>
+  </section>
+  <div class="table_br">
+    <table border="2">
+      <thead>
+        <tr>
+          <th><input type="checkbox" name="checkboxMain" id="checkboxMain" class="checkbox-label"></label></th>
+          <th id="id">No</th>
+          <th id="name">Chemical name</th>
+          <th id="vendor">Vendor</th>
+          <th id="density">Density <br><span>g/m²</span></th>
+          <th id="viscosity">Viscosity <br><span>m²/s</span></th>
+          <th id="packaging">Packaging</th>
+          <th id="size">Pack size</th>
+          <th id="unit">Unit</th>
+          <th id="qty">Quantity</th>
+        </tr>
+      </thead>
+      <tbody id="data-output">
+  
+      </tbody>
+    </table>
+  </div>
   <script src="script.js"></script>
 </body>
 
