--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           <th id="id">No</th>
           <th id="name">Chemical name</th>
           <th id="vendor">Vendor</th>
-          <th id="density">Density <br><span>g/m²</span></th>
-          <th id="viscosity">Viscosity <br><span>m²/s</span></th>
+          <th id="density">Density <span>g/m²</span></th>
+          <th id="viscosity">Viscosity<span>m²/s</span></th>
           <th id="packaging">Packaging</th>
           <th id="size">Pack size</th>
           <th id="unit">Unit</th>
